nombres a los productos que faltaban

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <div class="precio">
                 $100  
             </div>
+            <p>Medias de hombres</p>
             
         </div>
 
@@ -93,6 +94,7 @@
             <div class="precio">
                 $100  
             </div>
+            <p>Medias de mujer</p>
         </div>
 
         <div class="producto">
@@ -100,6 +102,7 @@
             <div class="precio">
                 $100  
             </div>
+            <p>Medias de niños</p>
         </div>
 
         <div class="producto">
@@ -107,6 +110,7 @@
             <div class="precio">
                 $100  
             </div>
+            <p>Sábanas</p>
         </div>
     </div>
 
