--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="whatsapp">
         <a href="https://wa.me/543416021604" target="_blank"> 
         <img src="favicon/whatsappp.png" alt=""></a>
-    <p>Contactame por whatsapp</p>
+    <p class="contacto">Contactame por whatsapp</p>
 </div>
 
 </body>
